Fix completely bogus MediaDeviceHandler::removeMediaDeviceTrackFromColl

That method did not work _at all_ because it used wrong key in the
trackMap forgot to actually write back other maps. :-)

As a result, dead tracks were never removed from memory collection and
thus the count was not updated, among other (worse) things.

BUG: 232093
FIXED-IN: 2.5
DIGEST: Capacity gauge is now always updated for iPods & MTP devices